[js] added todo page

--- a/js/src/main/resources/index-dev.html
+++ b/js/src/main/resources/index-dev.html
@@ -7,6 +7,7 @@
 
     <link href="front-res/css/style.css" rel="stylesheet">
     <link href="../../../target/scala-2.13/scalajs-bundler/main/node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/792008ec0a.js"></script>
 </head>
 <body style="margin: 0px">
 
