--- a/js/src/main/resources/index.html
+++ b/js/src/main/resources/index.html
@@ -7,7 +7,7 @@
 
     <link href="front-res/css/style.css" rel="stylesheet">
     <link href="assets/bootstrap.min.css" rel="stylesheet">
-
+    <script src="https://kit.fontawesome.com/792008ec0a.js"></script>
 </head>
 <body style="margin: 0px">
 
